Updated last sections of the codelab - v1 ready for review and can be finalized if all looks good